Closed
Bug 120364
Opened 23 years ago
Closed 22 years ago
Asserts, incorrect layout on printing of site
Categories
(Core :: Layout: Tables, defect, P1)
Tracking
()
RESOLVED
FIXED
Future
People
(Reporter: rods, Assigned: karnaze)
References
(Blocks 1 open bug, )
Details
(Keywords: testcase, Whiteboard: [awd:tbl][p3][NEED INFO] PATCH)
Attachments
(2 files)
394 bytes,
patch
|
Details | Diff | Splinter Review | |
8.76 KB,
patch
|
karnaze
:
review+
attinasi
:
superreview+
|
Details | Diff | Splinter Review |
Assert because it coan't find a frame it should be finding:
nsDebug::Assertion(const char * 0x02e08e18, const char * 0x02e08e0c, const char
* 0x02e08de0, int 189) line 290 + 13 bytes
nsFrameList::RemoveFrame(nsIFrame * 0x0564f894) line 189 + 32 bytes
nsContainerFrame::DeleteChildsNextInFlow(nsIPresContext * 0x0562ead0, nsIFrame *
0x0564f7e0) line 917 + 15 bytes
nsContainerFrame::ReflowChild(nsIFrame * 0x0564f7e0, nsIPresContext *
0x0562ead0, nsHTMLReflowMetrics & {...}, const nsHTMLReflowState & {...}, int 0,
int 0, unsigned int 0, unsigned int & 0) line 784
nsTableFrame::ReflowChildren(nsTableFrame * const 0x05655464, nsIPresContext *
0x0562ead0, nsTableReflowState & {...}, int 1, int 0, unsigned int & 0, int *
0x00000000) line 3133 + 50 bytes
nsTableFrame::ReflowTable(nsIPresContext * 0x0562ead0, nsHTMLReflowMetrics &
{...}, const nsHTMLReflowState & {...}, int 1073741824, nsReflowReason
eReflowReason_Resize, int & 0, int & 1, unsigned int & 0) line 2120
nsTableFrame::Reflow(nsTableFrame * const 0x05655464, nsIPresContext *
0x0562ead0, nsHTMLReflowMetrics & {...}, const nsHTMLReflowState & {...},
unsigned int & 0) line 1999
nsContainerFrame::ReflowChild(nsIFrame * 0x05655464, nsIPresContext *
0x0562ead0, nsHTMLReflowMetrics & {...}, const nsHTMLReflowState & {...}, int 0,
int 0, unsigned int 3, unsigned int & 0) line 748 + 31 bytes
nsTableOuterFrame::OuterReflowChild(nsTableOuterFrame * const 0x05655294,
nsIPresContext * 0x0562ead0, nsIFrame * 0x05655464, const nsHTMLReflowState &
{...}, nsHTMLReflowMetrics & {...}, int * 0x00000000, nsSize & {...}, nsMargin &
{...}, nsMargin & {...}, nsMargin & {...}, nsReflowReason eReflowReason_Resize,
unsigned int & 0) line 978 + 47 bytes
nsTableOuterFrame::Reflow(nsTableOuterFrame * const 0x05655294, nsIPresContext *
0x0562ead0, nsHTMLReflowMetrics & {...}, const nsHTMLReflowState & {...},
unsigned int & 0) line 1561 + 72 bytes
nsBlockReflowContext::DoReflowBlock(nsHTMLReflowState & {...}, nsReflowReason
eReflowReason_Resize, nsIFrame * 0x05655294, const nsRect & {...}, int 0,
nsCollapsingMargin & {...}, int 1, nsMargin & {...}, unsigned int & 0) line 580
+ 36 bytes
Reporter | ||
Comment 1•23 years ago
|
||
Setting to 0.9.9 so it get looked at.
Blocks: 113915
Target Milestone: --- → mozilla0.9.9
hey rod, I'm not getting any asserts, but its definitely not printing right.
Any more info?
Whiteboard: [awd:tbl][p3][NEED INFO]
Comment 3•23 years ago
|
||
Making nsbeta1+. This is a general problem that happens with many sites and it is
preventing print preview from working properly. The assert is firing because a
frame that print preview will access later has been destroyed. This results in
missing pages and crashes during print preview
Assignee | ||
Updated•23 years ago
|
Status: NEW → ASSIGNED
Assignee | ||
Comment 4•23 years ago
|
||
Assignee | ||
Updated•23 years ago
|
Summary: Asserts on printing of site → Asserts, incorrect layout on printing of site
Assignee | ||
Comment 5•23 years ago
|
||
The assertion should not be there since the frame was in the overflow list. The
table desired height was too large.
Comment 6•23 years ago
|
||
Comment on attachment 70419 [details] [diff] [review]
patch to fix the bug
sr=attinasi
Attachment #70419 -
Flags: superreview+
Comment 7•23 years ago
|
||
Comment on attachment 70419 [details] [diff] [review]
patch to fix the bug
r= alexsavulov
Assignee | ||
Updated•23 years ago
|
Whiteboard: [awd:tbl][p3][NEED INFO] → [awd:tbl][p3][NEED INFO] PATCH
Assignee | ||
Comment 9•23 years ago
|
||
*** Bug 121480 has been marked as a duplicate of this bug. ***
Assignee | ||
Comment 10•23 years ago
|
||
*** Bug 108072 has been marked as a duplicate of this bug. ***
Assignee | ||
Comment 11•23 years ago
|
||
*** Bug 121149 has been marked as a duplicate of this bug. ***
Assignee | ||
Updated•23 years ago
|
Attachment #70419 -
Flags: review+
Assignee | ||
Comment 12•23 years ago
|
||
The patch is in. There is now a different assertion in the url. I'll leave the
bug open for now, but may move it past m1.0 if it is not serious.
Comment 13•23 years ago
|
||
I clearing the nsbeta1+ since the problem causing the original assertion is
fixed. If there is still a major problem please nominate for nsbeta1 by removing
the -.
Updated•23 years ago
|
Target Milestone: mozilla1.0 → Future
Assignee | ||
Comment 14•22 years ago
|
||
I filed bug 172527 to deal with the assertion. I'm closing this for good now.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•