bug 120364 - remove framelist assertion; have table with height return correct desired height when row group splits. sr=attinasi, r=alexsavulov